# site_quotes

./: README.md  pyproject.toml
hw_site/: manage.py
hw_site/hw_site/: asgi.py  settings.py  urls.py  wsgi.py
hw_site/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_site/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw_site/quotes/static/quotes/: style.css
hw_site/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html
hw_site/users/: forms.py  urls.py  views.py
hw_site/users/migrations/: 0001_initial.py
hw_site/users/templates/users/: login.html  password_reset_subject.txt  signup.html
hw_site/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
mysite/mysite/: settings.py
mysite/polls/: views.py
mysite/polls/migrations/: 0001_initial.py
notes/noteapp/: forms.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
notes/notes/: settings.py  urls.py
notes/users/: forms.py  models.py  views.py
notes/users/migrations/: 0001_initial.py
