[tool.poetry]
name = "site-quotes"
version = "0.1.0"
description = ""
authors = ["lana-sviatash <sviatash.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"
pymongo = "^4.5.0"
bson = "^0.5.10"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
